--- a/railsBlog/app/assets/stylesheets/application.css.scss
+++ b/railsBlog/app/assets/stylesheets/application.css.scss
@@ -36,26 +36,21 @@ a {
 	top: 0;
 	height: 100%;
 	background: #f5f7f9;
-	padding: 7em 0 0 0;
+	padding: 20px 0 0 0;
 	border-right: 1px solid #d6dce0;
-	#logo {
-		width: 40px;
-		position: absolute;
-		right: 3em;
-		top: 3em;
-	}
+
 	ul {
 		list-style: none;
 		text-align: right;
 		padding-right: 3em;
 		.category {
 			font-weight: 700;
-			font-size: 0.7em;
+			font-size: 16px;
 			text-transform: uppercase;
 			color: #33acb7;
 		}
 		li {
-			padding: .5em 0;
+			padding: 10px 0;
 			a {
 				color: #9eafba;
 				text-decoration: none;
