--- a/railsBlog/app/views/devise/registrations/new.html.erb
+++ b/railsBlog/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,15 @@
 <div id="page_wrapper">
-  <h2>Sign Up</h2>
+  <h2>Register</h2>
 
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= devise_error_messages! %>
     <br>
 
-    <div class="field">
-    <%= f.label :first_name %><br>
-    <%= f.text_field :first_name, autofocus: true %>
+    <div><%= f.label :name %><br />
+        <%= f.text_field :name, autofocus: true %>
     </div>
     <br>
-  
-    <div class="field">
-    <%= f.label :last_name %><br>
-    <%= f.text_field :last_name %>
-    </div>
-    <br>
+
 
     <div class="field">
       <%= f.label :email %><br />
