--- a/railsBlog/app/views/layouts/application.html.erb
+++ b/railsBlog/app/views/layouts/application.html.erb
@@ -18,21 +18,18 @@
   		</div>
 
   		<ul>
-  			<li class="category">Signed in as,</li>
+  			<li class="category">Welcome</li>
   			<li><%= link_to "Blog", root_path %></li>
-  			<li><%= link_to "About", about_path %></li>
-  		</ul>
-
-  		<ul>
-  			<li class="category">Social</li>
-  			<li a href=""></a></li>
-  			<li a href=""></a></li>
-  			<li a href=""></a></li>
-  			<li a href=""></a></li>
+  			<li><%= link_to "Bloggers", bloggers_path %></li>
   		</ul>
 
 		<% if !user_signed_in? %>
   			<p class="sign_in"><%= link_to "Log In", new_user_session_path %></p>
+  		<% else %>
+
+		<ul>
+  			<li class="category"> <%= current_user.email %> </li>
+		</ul>
   		<% end %>
   	</div>
 
@@ -41,8 +38,8 @@
 
   		<% if current_page?(root_path) %>
   			<p>All Posts</p>
-  		<% elsif current_page?(about_path) %>
-  			<p>About</p>
+  		<% elsif current_page?(bloggers_path) %>
+  			<p>Users</p>
   		<% else %>
   		<button class="button"><%= link_to "Back", root_path %></button>
   		<% end %>
